# deeplearning_scafolding

./: .gitignore  justfile  main.py  pyproject.toml  vegetation_segmentation.ipynb
outputs/shade_off/: predictions.geojson  test_report.txt
outputs/shade_on/: predictions.geojson  test_report.txt
